--- a/camaracomercio/camara/template/adminview/home.html
+++ b/camaracomercio/camara/template/adminview/home.html
@@ -8,8 +8,11 @@
             <a href="{% url 'afiliaciones_pendientes' %}" class="btn btn-primary me-2">
                 <i class="fas fa-user-clock me-1"></i> Ver afiliaciones pendientes
             </a>
-            <a href="{% url 'admin_servicios_list' %}" class="btn btn-success">
+            <a href="{% url 'admin_servicios_list' %}" class="btn btn-success me-2">
                 <i class="fas fa-cogs me-1"></i> Gestionar servicios
+            </a>
+            <a href="{% url 'admin_ver_afiliados' %}" class="btn btn-info">
+                <i class="fas fa-users me-1"></i> Ver afiliados
             </a>
         </div>
     </div>
